feat: add favicon

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     <!-- JAVASCRIPT -->
     <script src="/src/javascript/script.js" defer></script>
     <script src="https://unpkg.com/scrollreveal"></script>
-    <title>dataagency</title>
+    <link rel="icon" type="image/x-icon" href="/src/images/favico.svg" />
+    <title>DataAgency</title>
   </head>
 
   <body>
