--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="A Data Agency é uma empresa líder em soluções digitais, fornecendo aos nossos clientes as melhores soluções possíveis para suas necessidades digitais. Estamos comprometidos com a inovação e a excelência, e estamos sempre buscando novas maneiras de melhorar nossos serviços." />
     <!-- FONTAWESOME -->
     <link
       rel="stylesheet"
@@ -55,9 +58,15 @@
 
         <!-- REDES SOCIAIS -->
         <div id="nav_social">
-          <a class="social-links"><i class="fa-brands fa-instagram"></i></a>
-          <a class="social-links"><i class="fa-brands fa-linkedin-in"></i></a>
-          <a class="social-links"><i class="fa-brands fa-youtube"></i></a>
+          <a href="#" class="social-links"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <a href="#" class="social-links"
+            ><i class="fa-brands fa-linkedin-in"></i
+          ></a>
+          <a href="#" class="social-links"
+            ><i class="fa-brands fa-youtube"></i
+          ></a>
         </div>
 
         <!-- BOTÃO MENU HAMBURGUER -->
@@ -178,7 +187,7 @@
             <p class="project-description">
               Site institucional feito para o banco digital YouBank
             </p>
-            <a class="project-link">Visualizar Projeto</a>
+            <a href="#" class="project-link">Visualizar Projeto</a>
           </div>
 
           <div class="project-card">
@@ -186,7 +195,7 @@
             <p class="project-description">
               Sistema médico para realização de agendamento de consultas
             </p>
-            <a class="project-link">Visualizar Projeto</a>
+            <a href="#" class="project-link">Visualizar Projeto</a>
           </div>
 
           <div class="project-card">
@@ -195,7 +204,7 @@
               Aplicativo mobile com vagas para quem está a procura do seu
               primeiro emprego
             </p>
-            <a class="project-link">Visualizar Projeto</a>
+            <a href="#" class="project-link">Visualizar Projeto</a>
           </div>
 
           <div class="project-card">
@@ -203,7 +212,7 @@
             <p class="project-description">
               Blog com matérias e novidades a cerca do mundo dos games
             </p>
-            <a class="project-link">Visualizar Projeto</a>
+            <a href="#" class="project-link">Visualizar Projeto</a>
           </div>
 
           <div class="project-card">
@@ -211,7 +220,7 @@
             <p class="project-description">
               Aplicativo de entrega delivery de hamburguers artesanais
             </p>
-            <a class="project-link">Visualizar Projeto</a>
+            <a href="#" class="project-link">Visualizar Projeto</a>
           </div>
 
           <div class="project-card">
@@ -219,7 +228,7 @@
             <p class="project-description">
               Website institucional feito para cabelereira e maquiadora Sonia
             </p>
-            <a class="project-link">Visualizar Projeto</a>
+            <a href="#" class="project-link">Visualizar Projeto</a>
           </div>
         </div>
 
