feat: Update HTML

--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
 
         <!-- REDES SOCIAIS -->
         <div id="nav_social">
-          <a href="#" class="social-links"
+          <a href="#" rel="noopener" class="social-links"
             ><i class="fa-brands fa-instagram"></i
           ></a>
-          <a href="#" class="social-links"
+          <a href="#" rel="noopener" class="social-links"
             ><i class="fa-brands fa-linkedin-in"></i
           ></a>
-          <a href="#" class="social-links"
+          <a href="#" rel="noopener" class="social-links"
             ><i class="fa-brands fa-youtube"></i
           ></a>
         </div>
@@ -187,7 +187,9 @@
             <p class="project-description">
               Site institucional feito para o banco digital YouBank
             </p>
-            <a href="#" class="project-link">Visualizar Projeto</a>
+            <a href="#" rel="noopener" class="project-link"
+              >Visualizar Projeto</a
+            >
           </div>
 
           <div class="project-card">
@@ -195,7 +197,9 @@
             <p class="project-description">
               Sistema médico para realização de agendamento de consultas
             </p>
-            <a href="#" class="project-link">Visualizar Projeto</a>
+            <a href="#" rel="noopener" class="project-link"
+              >Visualizar Projeto</a
+            >
           </div>
 
           <div class="project-card">
@@ -204,7 +208,9 @@
               Aplicativo mobile com vagas para quem está a procura do seu
               primeiro emprego
             </p>
-            <a href="#" class="project-link">Visualizar Projeto</a>
+            <a href="#" rel="noopener" class="project-link"
+              >Visualizar Projeto</a
+            >
           </div>
 
           <div class="project-card">
@@ -212,7 +218,9 @@
             <p class="project-description">
               Blog com matérias e novidades a cerca do mundo dos games
             </p>
-            <a href="#" class="project-link">Visualizar Projeto</a>
+            <a href="#" rel="noopener" class="project-link"
+              >Visualizar Projeto</a
+            >
           </div>
 
           <div class="project-card">
@@ -220,7 +228,9 @@
             <p class="project-description">
               Aplicativo de entrega delivery de hamburguers artesanais
             </p>
-            <a href="#" class="project-link">Visualizar Projeto</a>
+            <a href="#" rel="noopener" class="project-link"
+              >Visualizar Projeto</a
+            >
           </div>
 
           <div class="project-card">
@@ -228,7 +238,9 @@
             <p class="project-description">
               Website institucional feito para cabelereira e maquiadora Sonia
             </p>
-            <a href="#" class="project-link">Visualizar Projeto</a>
+            <a href="#" rel="noopener" class="project-link"
+              >Visualizar Projeto</a
+            >
           </div>
         </div>
 
