--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
     <meta
       name="description"
       content="A Data Agency é uma empresa líder em soluções digitais, fornecendo aos nossos clientes as melhores soluções possíveis para suas necessidades digitais. Estamos comprometidos com a inovação e a excelência, e estamos sempre buscando novas maneiras de melhorar nossos serviços." />
-    <!-- FONTAWESOME -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer" />
+    <!-- IONIC ICON -->
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+      defer></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+      defer></script>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="/src/styles/style.css" />
+    <link rel="stylesheet" href="/src/styles/index.css" />
     <link rel="stylesheet" href="/src/styles/header.css" />
     <link rel="stylesheet" href="/src/styles/home.css" />
     <link rel="stylesheet" href="/src/styles/services.css" />
@@ -59,13 +61,13 @@
         <!-- REDES SOCIAIS -->
         <div id="nav_social">
           <a href="#" rel="noopener" class="social-links"
-            ><i class="fa-brands fa-instagram"></i
+            ><ion-icon name="logo-instagram"></ion-icon
           ></a>
           <a href="#" rel="noopener" class="social-links"
-            ><i class="fa-brands fa-linkedin-in"></i
+            ><ion-icon name="logo-linkedin"></ion-icon
           ></a>
           <a href="#" rel="noopener" class="social-links"
-            ><i class="fa-brands fa-youtube"></i
+            ><ion-icon name="logo-github"></ion-icon
           ></a>
         </div>
 
@@ -122,7 +124,7 @@
           </div>
 
           <button class="btn-default">
-            <i class="fa-solid fa-phone"></i>
+            <ion-icon name="call"></ion-icon>
             Entre em contato
           </button>
         </div>
@@ -136,14 +138,17 @@
       </section>
 
       <section id="services">
-        <h2 id="services_title">Serviços</h2>
+        <h2 id="services_title">
+          Temos as melhores soluções para suas necessidades digitais
+        </h2>
         <div id="services_card_content">
           <div class="services-card">
-            <img
-              src="/src/images/web-image.svg"
-              alt=""
-              class="services-card-image" />
-            <h3 class="services-card-title">Desenvolvimento Web</h3>
+            <ion-icon
+              class="services-card-icon"
+              name="globe-outline"></ion-icon>
+            <h3 class="services-card-title">
+              Desenvolvimento de sistemas para web
+            </h3>
             <p class="services-card-description">
               Desenvolvemos websites responsivos e otimizados para mecanismos de
               busca, que ajudam você a alcançar mais clientes e aumentar suas
@@ -152,11 +157,12 @@
           </div>
 
           <div class="services-card">
-            <img
-              src="/src/images/mobile-image.svg"
-              alt=""
-              class="services-card-image" />
-            <h3 class="services-card-title">Desenvolvimento Mobile</h3>
+            <ion-icon
+              class="services-card-icon"
+              name="phone-portrait-outline"></ion-icon>
+            <h3 class="services-card-title">
+              Desenvolvimento de aplicações mobile
+            </h3>
             <p class="services-card-description">
               Desenvolvemos aplicativos móveis personalizados para iOS e
               Android, que ajudam você a alcançar seus clientes em qualquer
@@ -165,11 +171,12 @@
           </div>
 
           <div class="services-card">
-            <img
-              src="/src/images/marketing-image.svg"
-              alt=""
-              class="services-card-image" />
-            <h3 class="services-card-title">Marketing Digital</h3>
+            <ion-icon
+              class="services-card-icon"
+              name="megaphone-outline"></ion-icon>
+            <h3 class="services-card-title">
+              Marketing digital e gerenciamento de mídias sociais
+            </h3>
             <p class="services-card-description">
               Ajudamos você a alcançar mais clientes, aumentar suas vendas e
               melhorar sua presença online.
@@ -179,7 +186,7 @@
       </section>
 
       <section id="projects">
-        <h2 id="projects_title">Projetos</h2>
+        <h2 id="projects_title">Conheça alguns de nossos cases de sucesso</h2>
 
         <div id="projects_card_content">
           <div class="project-card">
@@ -250,7 +257,9 @@
       </section>
 
       <section id="testemonials">
-        <h2 id="testemonials_title">Depoimentos</h2>
+        <h2 id="testemonials_title">
+          O que nossos clientes dizem sobre nossa empresa
+        </h2>
         <div id="testemonials_content">
           <div id="testemonials_banner">
             <img
@@ -267,11 +276,21 @@
                 seu atendimento ao cliente é excelente</q
               >
               <div class="testemonial-evaluation">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
+                <ion-icon
+                  class="testemonial-evaluation-icon"
+                  name="star"></ion-icon>
+                <ion-icon
+                  class="testemonial-evaluation-icon"
+                  name="star"></ion-icon>
+                <ion-icon
+                  class="testemonial-evaluation-icon"
+                  name="star"></ion-icon>
+                <ion-icon
+                  class="testemonial-evaluation-icon"
+                  name="star"></ion-icon>
+                <ion-icon
+                  class="testemonial-evaluation-icon"
+                  name="star"></ion-icon>
               </div>
             </div>
 
@@ -284,11 +303,21 @@
                 estou muito feliz com o resultado</q
               >
               <div class="testemonial-evaluation">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
+                <ion-icon
+                  class="testemonial-evaluation-icon"
+                  name="star"></ion-icon>
+                <ion-icon
+                  class="testemonial-evaluation-icon"
+                  name="star"></ion-icon>
+                <ion-icon
+                  class="testemonial-evaluation-icon"
+                  name="star"></ion-icon>
+                <ion-icon
+                  class="testemonial-evaluation-icon"
+                  name="star"></ion-icon>
+                <ion-icon
+                  class="testemonial-evaluation-icon"
+                  name="star"></ion-icon>
               </div>
             </div>
           </div>
@@ -299,9 +328,7 @@
       <p class="copyright">
         Copyright © <span>lucasraiony.</span> Todos os Direitos Reservados
       </p>
-      <p class="powered">
-        Powered by <img src="/src/images/footer-logo.svg" alt="" />
-      </p>
+      <p class="powered">Desenvolvido por lucasraiony</p>
     </footer>
   </body>
 </html>
