update all files

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
       defer></script>
+    <!-- FONT AWESOME -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer" />
 
     <!-- CSS -->
     <link rel="stylesheet" href="/src/styles/index.css" />
@@ -67,7 +74,7 @@
             ><ion-icon name="logo-linkedin"></ion-icon
           ></a>
           <a href="#" rel="noopener" class="social-links"
-            ><ion-icon name="logo-github"></ion-icon
+            ><ion-icon name="logo-youtube"></ion-icon
           ></a>
         </div>
 
@@ -86,9 +93,15 @@
         </ul>
 
         <div id="mobile_nav_social">
-          <a class="social-links"><i class="fa-brands fa-instagram"></i></a>
-          <a class="social-links"><i class="fa-brands fa-linkedin-in"></i></a>
-          <a class="social-links"><i class="fa-brands fa-youtube"></i></a>
+          <a href="#" rel="noopener" class="social-links"
+            ><ion-icon name="logo-instagram"></ion-icon
+          ></a>
+          <a href="#" rel="noopener" class="social-links"
+            ><ion-icon name="logo-linkedin"></ion-icon
+          ></a>
+          <a href="#" rel="noopener" class="social-links"
+            ><ion-icon name="logo-youtube"></ion-icon
+          ></a>
         </div>
       </div>
     </header>
@@ -326,7 +339,11 @@
     </main>
     <footer>
       <p class="copyright">
-        Copyright © <span>lucasraiony.</span> Todos os Direitos Reservados
+        Copyright ©
+        <a href="https://www.linkedin.com/in/lucas-raiony-b9899a2b5/"
+          >lucasraiony</a
+        >
+        Todos os Direitos Reservados
       </p>
       <p class="powered">Desenvolvido por lucasraiony</p>
     </footer>
